--- a/mealify/View/Base.lproj/Main.storyboard
+++ b/mealify/View/Base.lproj/Main.storyboard
@@ -2045,16 +2045,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9K-4f-yxK">
-                                <rect key="frame" x="155" y="79" width="65" height="30"/>
-                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="25"/>
+                                <rect key="frame" x="0.0" y="79" width="375" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="SnV-Ok-QPC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6y3-U3-Dc2">
                                 <rect key="frame" x="164" y="508" width="47" height="47"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="47" id="4Iu-kF-F2K"/>
-                                    <constraint firstAttribute="width" constant="47" id="db7-B3-lzF"/>
+                                    <constraint firstAttribute="height" constant="47" id="Dd8-ca-hvk"/>
+                                    <constraint firstAttribute="width" constant="47" id="NF7-nS-Qsv"/>
                                 </constraints>
                                 <state key="normal" image="add-1">
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2063,20 +2066,20 @@
                                     <segue destination="aah-sa-43E" kind="show" identifier="updateFoods" id="L63-c6-e9j"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nutrition values for 1 serving" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s77-dl-HBe">
-                                <rect key="frame" x="0.0" y="117" width="375" height="17"/>
-                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Meal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K5K-x4-gc9">
                                 <rect key="frame" x="156" y="568" width="63" height="17"/>
                                 <fontDescription key="fontDescription" name="Gravity-Bold" family="Gravity" pointSize="14"/>
                                 <color key="textColor" red="0.83137816190719604" green="0.83136248588562012" blue="0.83137315511703491" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nutrition values for 1 serving" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s77-dl-HBe">
+                                <rect key="frame" x="0.0" y="167" width="375" height="17"/>
+                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sPg-KG-Ynw">
-                                <rect key="frame" x="16" y="161" width="343" height="327"/>
+                                <rect key="frame" x="16" y="211" width="343" height="298"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="14"/>
@@ -2085,20 +2088,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="x9K-4f-yxK" firstAttribute="top" secondItem="PCU-gg-VWi" secondAttribute="bottom" constant="15" id="1jD-kd-p5c"/>
-                            <constraint firstItem="sPg-KG-Ynw" firstAttribute="top" secondItem="s77-dl-HBe" secondAttribute="bottom" constant="27" id="Bil-ov-fbC"/>
-                            <constraint firstAttribute="trailing" secondItem="s77-dl-HBe" secondAttribute="trailing" id="LtI-F3-N6O"/>
-                            <constraint firstItem="s77-dl-HBe" firstAttribute="top" secondItem="x9K-4f-yxK" secondAttribute="bottom" constant="8" id="RMg-ch-Pqu"/>
-                            <constraint firstItem="sPg-KG-Ynw" firstAttribute="leading" secondItem="l9B-J3-tOU" secondAttribute="leading" constant="16" id="ScN-3T-4lP"/>
-                            <constraint firstItem="K5K-x4-gc9" firstAttribute="centerX" secondItem="l9B-J3-tOU" secondAttribute="centerX" id="WPp-cG-9mH"/>
-                            <constraint firstItem="6y3-U3-Dc2" firstAttribute="centerX" secondItem="l9B-J3-tOU" secondAttribute="centerX" id="YzV-HY-Thv"/>
-                            <constraint firstItem="s77-dl-HBe" firstAttribute="centerX" secondItem="l9B-J3-tOU" secondAttribute="centerX" id="cao-Sg-kMh"/>
-                            <constraint firstItem="6y3-U3-Dc2" firstAttribute="top" secondItem="sPg-KG-Ynw" secondAttribute="bottom" priority="250" constant="20" id="gIn-Ht-H9W"/>
-                            <constraint firstItem="s77-dl-HBe" firstAttribute="leading" secondItem="l9B-J3-tOU" secondAttribute="leading" id="mIV-Qt-mP2"/>
-                            <constraint firstItem="uro-zB-3za" firstAttribute="top" secondItem="sPg-KG-Ynw" secondAttribute="bottom" constant="179" id="rYV-a4-Yqm"/>
-                            <constraint firstItem="x9K-4f-yxK" firstAttribute="centerX" secondItem="l9B-J3-tOU" secondAttribute="centerX" id="wj9-7G-Ob0"/>
-                            <constraint firstItem="sPg-KG-Ynw" firstAttribute="centerX" secondItem="l9B-J3-tOU" secondAttribute="centerX" id="xUd-lh-Ar6"/>
-                            <constraint firstItem="K5K-x4-gc9" firstAttribute="top" secondItem="6y3-U3-Dc2" secondAttribute="bottom" constant="13" id="ye2-qR-3uJ"/>
+                            <constraint firstItem="sPg-KG-Ynw" firstAttribute="centerX" secondItem="6y3-U3-Dc2" secondAttribute="centerX" id="0J1-7H-YI1"/>
+                            <constraint firstItem="K5K-x4-gc9" firstAttribute="top" secondItem="sPg-KG-Ynw" secondAttribute="bottom" constant="59" id="3Nl-GB-1CX"/>
+                            <constraint firstItem="s77-dl-HBe" firstAttribute="centerX" secondItem="sPg-KG-Ynw" secondAttribute="centerX" id="6CU-I9-YFR"/>
+                            <constraint firstItem="sPg-KG-Ynw" firstAttribute="top" secondItem="s77-dl-HBe" secondAttribute="bottom" constant="27" id="9R7-ds-ew8"/>
+                            <constraint firstItem="uro-zB-3za" firstAttribute="top" secondItem="K5K-x4-gc9" secondAttribute="bottom" constant="82" id="RAV-u0-2xg"/>
+                            <constraint firstItem="x9K-4f-yxK" firstAttribute="leading" secondItem="l9B-J3-tOU" secondAttribute="leading" id="WLd-mE-j89"/>
+                            <constraint firstItem="K5K-x4-gc9" firstAttribute="top" secondItem="6y3-U3-Dc2" secondAttribute="bottom" constant="13" id="aga-Gd-Tr9"/>
+                            <constraint firstItem="6y3-U3-Dc2" firstAttribute="centerX" secondItem="K5K-x4-gc9" secondAttribute="centerX" id="iPR-Rh-t1t"/>
+                            <constraint firstItem="sPg-KG-Ynw" firstAttribute="leading" secondItem="l9B-J3-tOU" secondAttribute="leadingMargin" id="ieX-Qn-rzr"/>
+                            <constraint firstItem="s77-dl-HBe" firstAttribute="top" secondItem="x9K-4f-yxK" secondAttribute="bottom" constant="8" symbolic="YES" id="koq-Kt-Det"/>
+                            <constraint firstItem="x9K-4f-yxK" firstAttribute="trailing" secondItem="s77-dl-HBe" secondAttribute="trailing" id="nW7-Qn-zgM"/>
+                            <constraint firstItem="x9K-4f-yxK" firstAttribute="top" secondItem="PCU-gg-VWi" secondAttribute="bottom" constant="15" id="qur-dY-8CY"/>
+                            <constraint firstAttribute="trailing" secondItem="x9K-4f-yxK" secondAttribute="trailing" id="r9b-7e-6EE"/>
+                            <constraint firstItem="x9K-4f-yxK" firstAttribute="leading" secondItem="s77-dl-HBe" secondAttribute="leading" id="tIs-y2-M1L"/>
                         </constraints>
                     </view>
                     <connections>
@@ -2701,7 +2704,7 @@
         <image name="thumb" width="4" height="56"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="eGh-L8-pXD"/>
+        <segue reference="L63-c6-e9j"/>
         <segue reference="CPW-FE-HxN"/>
         <segue reference="FY3-nk-p63"/>
         <segue reference="Wrj-RH-YFn"/>
