--- a/mealify/View/Base.lproj/Main.storyboard
+++ b/mealify/View/Base.lproj/Main.storyboard
@@ -1247,39 +1247,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recommended Meal:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HDI-TE-oAJ">
-                                <rect key="frame" x="16" y="28" width="343" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommended Meal " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HDI-TE-oAJ">
+                                <rect key="frame" x="16" y="87" width="343" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="r6D-DF-ecE"/>
+                                    <constraint firstAttribute="width" constant="343" id="vbl-q6-gdU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vl0-dM-YNO">
-                                <rect key="frame" x="103" y="352" width="168" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="View Meal Description"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vl0-dM-YNO">
+                                <rect key="frame" x="16" y="156" width="343" height="93"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="93" id="Som-Sd-8Rq"/>
+                                    <constraint firstAttribute="width" constant="343" id="bWP-x4-IRh"/>
+                                </constraints>
                                 <connections>
                                     <segue destination="MVR-aO-aqM" kind="show" identifier="mealDescription" id="CPW-FE-HxN"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5th-Mh-EjV">
-                                <rect key="frame" x="212" y="32" width="147" height="27"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <state key="normal" title="Load Recommended Meal"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5th-Mh-EjV">
+                                <rect key="frame" x="162" y="352" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Rhb-fy-io5"/>
+                                    <constraint firstAttribute="width" constant="50" id="h41-2E-uvu"/>
+                                </constraints>
+                                <state key="normal" image="reload"/>
                                 <connections>
                                     <action selector="loadRecommended:" destination="yDy-Hn-aqY" eventType="touchUpInside" id="YwV-Xj-qH4"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qyJ-L5-xTq">
-                                <rect key="frame" x="16" y="97" width="343" height="93"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qyJ-L5-xTq">
+                                <rect key="frame" x="16" y="156" width="343" height="93"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="93" id="AB7-8S-yRe"/>
+                                    <constraint firstAttribute="width" constant="343" id="O5h-Md-Ibe"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="explore more food" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5c-qU-oux">
+                                <rect key="frame" x="128" y="418" width="119" height="17"/>
+                                <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="14"/>
+                                <color key="textColor" red="0.94486480951309204" green="0.63585305213928223" blue="0.57250255346298218" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Vl0-dM-YNO" firstAttribute="top" secondItem="PeY-It-eSw" secondAttribute="bottom" constant="136" id="0hx-c7-pri"/>
+                            <constraint firstItem="HDI-TE-oAJ" firstAttribute="top" secondItem="PeY-It-eSw" secondAttribute="bottom" constant="67" id="8HA-lp-d2K"/>
+                            <constraint firstItem="qyJ-L5-xTq" firstAttribute="leading" secondItem="wFj-bg-924" secondAttribute="leading" constant="16" id="8aY-go-Gpp"/>
+                            <constraint firstItem="HDI-TE-oAJ" firstAttribute="leading" secondItem="wFj-bg-924" secondAttribute="leading" constant="16" id="EJ5-UN-GAg"/>
+                            <constraint firstItem="qyJ-L5-xTq" firstAttribute="top" secondItem="PeY-It-eSw" secondAttribute="bottom" constant="136" id="Ysp-jo-v4y"/>
+                            <constraint firstItem="a5c-qU-oux" firstAttribute="top" secondItem="5th-Mh-EjV" secondAttribute="bottom" constant="16" id="aqV-f6-fHc"/>
+                            <constraint firstItem="Vl0-dM-YNO" firstAttribute="leading" secondItem="wFj-bg-924" secondAttribute="leading" constant="16" id="dVN-tE-605"/>
+                            <constraint firstItem="6ja-za-wQ7" firstAttribute="top" secondItem="5th-Mh-EjV" secondAttribute="bottom" constant="216" id="iOg-lT-3N5"/>
+                            <constraint firstItem="a5c-qU-oux" firstAttribute="centerX" secondItem="wFj-bg-924" secondAttribute="centerX" id="jhm-Up-tUf"/>
+                            <constraint firstItem="5th-Mh-EjV" firstAttribute="centerX" secondItem="wFj-bg-924" secondAttribute="centerX" id="zq9-JE-P2X"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Explore Meals" image="nav_recipe_grey@3x" selectedImage="nav_recipe_color" id="yEq-cV-M07"/>
                     <connections>
@@ -2714,6 +2742,7 @@
         <image name="nav_user_color" width="25" height="25"/>
         <image name="nav_user_grey" width="25" height="25"/>
         <image name="nextBtn" width="69" height="69"/>
+        <image name="reload" width="128" height="128"/>
         <image name="sandwich" width="96" height="96"/>
         <image name="scale" width="47" height="193"/>
         <image name="scoreContainer" width="68" height="72"/>
